// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getData Saga should call api at first 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/folders",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getNotesData Saga should call api at first 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/folders/id/notes",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
